// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DataTable Default 1`] = `
<div
  className="sc-eCssSg bDSPAh"
>
  <header
    className="sc-jSgupP iUjCLu"
  >
    <h3
      className="sc-gKsewC czodJZ"
    >
      This is a title
    </h3>
  </header>
  <table
    className="sc-pFZIQ dHBYJo"
  >
    <tbody>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle 1`] = `
<div
  className="sc-eCssSg bDSPAh"
>
  <header
    className="sc-jSgupP iUjCLu"
  >
    <h3
      className="sc-gKsewC czodJZ"
    >
      This is a title
    </h3>
    <h4
      className="sc-iBPRYJ jsXiGR"
    >
      Subtitle
    </h4>
  </header>
  <table
    className="sc-pFZIQ dHBYJo"
  >
    <tbody>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle And Children 1`] = `
<div
  className="sc-eCssSg bDSPAh"
>
  <header
    className="sc-jSgupP iUjCLu"
  >
    <h3
      className="sc-gKsewC czodJZ"
    >
      This is a title
    </h3>
    <h4
      className="sc-iBPRYJ jsXiGR"
    >
      Subtitle
    </h4>
    <div
      className="sc-fubCfw cRYdgb"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-pFZIQ dHBYJo"
  >
    <tbody>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable Without Subtitle And With Children 1`] = `
<div
  className="sc-eCssSg bDSPAh"
>
  <header
    className="sc-jSgupP iUjCLu"
  >
    <h3
      className="sc-gKsewC czodJZ"
    >
      This is a title
    </h3>
    <div
      className="sc-fubCfw cRYdgb"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-pFZIQ dHBYJo"
  >
    <tbody>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jrAGrp hBErSp"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
